objects/Pain_and_Need__c.object
<CustomObject>
    <description>This object tracks the pain of the financial product, non-financial product and complaint</description>
    <fields>
        <fullName>Call_Plan_Call_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Plan / Call Report</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Call_Report__c.CIS_ID__c</field>
                <operation>equals</operation>
                <valueField>$Source.Customer__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Call_Report__c</referenceTo>
        <relationshipLabel>Pains and Needs</relationshipLabel>
        <relationshipName>Pains</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pains and Needs</relationshipLabel>
        <relationshipName>Pains</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Have_Pain_Needs__c</fullName>
        <formula>&quot;Y&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Have Pain/Needs?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pain_List__c</fullName>
        <label>Pain List</label>
        <picklist>
            <controllingField>Product__c</controllingField>
            <picklistValues>
                <fullName>Credit (ขอเพิ่ม, เปลี่ยนแปลงเงื่อนไขวงเงิน)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing (ต่อรองค่าธรรมเนียม, วิธีคิดค่าธรรมเนียม)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service (ไม่พอใจบริการของ Spoke)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>เศรษฐกิจ (เศรษฐกิจชะลอตัว, งบประมาณของรัฐลดลง)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ โปรดระบุ (Relationship, ปรับโครงสร้างหนี้, Refinance ไปธนาคารอื่น, ลูกค้าปิดกิจการ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>มี LI ไฟฟ้าอย่างเดียว</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing (ต่อรองค่าดอกเบี้ย, ค่าธรรมเนียม)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service (ไม่พอใจบริการของสาขา, ความถูกต้องและรวดเร็วในการออกเอกสาร / Spoke)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>เศรษฐกิจ (ซื้อ-ขาย ในประเทศมากขึ้น, บริษัทมีสภาพคล่องเพียงพอ, คู่ค้าชะลอคำสั่งซื้อ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ไม่มีธุรกรรมต่างประเทศอีกต่อไป</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ลูกค้าต่อรอง Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ลูกค้ารู้สึกว่าไม่ได้รับประโยชน์จากการทำ Fwd/Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ไม่มี Pain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ โปรดระบุ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pain_Resolution_Description__c</fullName>
        <label>Pain Resolution Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pain_Status__c</fullName>
        <label>Pain Status</label>
        <picklist>
            <controllingField>Pain_List__c</controllingField>
            <picklistValues>
                <fullName>No Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>จบ (แก้ได้)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>จบ(แก้ไม่ได้)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ยังไม่จบ(ต้องตามต่อ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>โอนให้คนอื่นดำเนินการต่อ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Pain LI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pain TF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pain FX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile</label>
        <type>Text</type>
    </fields>
    <label>Pain and Need</label>
    <nameField>
        <displayFormat>PAIN-{00000000}</displayFormat>
        <label>Need/Pain No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pains and Needs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>